--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hazelqueue</name>
+	<name>protocomm</name>
 	<comment>Project hazelqueue created by Buildship.</comment>
 	<projects>
 	</projects>
