--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,30 @@
 ## Server Config ##
-server.port=8093
-server.io-threads=1
-server.event-threads.min=1
-server.event-threads.max=4
-uid.batch.gen=10000
+server.port=8082
+server.io-threads=2
+
+## Max length of the protocol message sent to server in a single request. Default 1000.
+#server.proto.len.max=1024
+
+## Length field offset. Default 0. Implies the length is prepended to the actual message that follows.
+#server.proto.len.offset=0
+
+## Length field size. Default 4. Implies the length is a 4 byte field (int)
+#server.proto.len.bytes=4
+
+#server.event-threads.min=1
+#server.event-threads.max=4
+
+## Proxy gateway Config ##
+## Set to true if this server is used as a gateway proxy.
+## In that case the target nodes should be set as
+## server.gw.target.<host>=<port>,..
+
+#server.gw=true
+#server.gw.target.127.0.0.1=8081,8082
+server.gw.target.localhost=8081,8082
 
 spring.jmx.enabled: false
 
-spring.hazelcast.config=classpath:hazelcast.xml
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %.-40logger{5} - %msg%n
+#logging.level.com.reactiva.emulator=DEBUG
 
-#logging.config=log4j.properties
-logging.level.com.reactiva.hazelq=INFO
-logging.level.com.hazelcast=WARN
-#logging.level.org.springframework.integration=WARN
-#logging.level.org.hibernate=INFO
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.springframework.jdbc=DEBUG
-#logging.level.org.springframework.transaction=DEBUG
-#logging.level.org.springframework.data.jpa=DEBUG
