WIP; pooling the target host connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ server.io-threads=2
 #server.gw=true
 #server.gw.target.127.0.0.1=8081,8082
 server.gw.target.localhost=8081,8082
+server.gw.maxpool.localhost=2
 
 spring.jmx.enabled: false
 
