added event executor groups for handlers. still working on pooling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 ## Server Config ##
 server.port=8081
-server.io-threads=2
+
+## Default 1
+#server.io-threads=2
+
+## Default 4
+#server.exec-threads=2
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
@@ -16,12 +21,15 @@ server.io-threads=2
 
 ## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
-## In that case the target nodes should be set as
-## server.gw.target.<host>=<port>,..
 
 #server.gw=true
+
+## In that case the target nodes should be set as
+## server.gw.target.<host>=<port>,..
 #server.gw.target.127.0.0.1=8081,8082
 server.gw.target.localhost=8081,8082
+
+## Max number of connections to be pooled for target
 server.gw.maxpool.localhost=2
 
 spring.jmx.enabled: false
