--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'java'
 apply plugin: 'spring-boot'
 
 springBoot {
-    mainClass = "com.reactiva.hazelq.Server"
+    mainClass = "com.reactiva.emulator.TNServer"
 }
 
 jar {
@@ -24,8 +24,8 @@ jar {
 	
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
   mavenCentral()
@@ -40,7 +40,6 @@ dependencies {
   }
   //compile('org.springframework.boot:spring-boot-starter-log4j')
   compile('io.netty:netty-all:4.1.2.Final')
-  compile group: 'javax.servlet', name: 'servlet-api', version: '2.4'
   testCompile("org.springframework.boot:spring-boot-starter-test")
   
 }
