added concurrent event exec support; removed pooling. Working on scalability.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## Server Config ##
-server.port=8081
+server.port=8093
 
-## Default 1
-#server.io-threads=2
+## Default 1. Note: Gateway communication executes on IO threads.
+server.io-threads=2
 
 ## Default 4
-#server.exec-threads=2
+server.exec-threads=4
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
@@ -29,8 +29,10 @@ server.port=8081
 #server.gw.target.127.0.0.1=8081,8082
 server.gw.target.localhost=8081,8082
 
-## Max number of connections to be pooled for target
-server.gw.maxpool.localhost=2
+## Max number of connections to be pooled for target.
+## DEPRECATED: Keep this 0. Not working as intended due to the single threaded 
+## task execution model of Netty
+server.gw.maxpool.localhost=0
 
 spring.jmx.enabled: false
 
