Server implementation baselined. Proxy needs to be worked upon

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8093
 server.io-threads=2
 
 ## Default 4
-server.exec-threads=4
+#server.exec-threads=4
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
@@ -16,13 +16,14 @@ server.exec-threads=4
 ## Length field size. Default 4. Implies the length is a 4 byte field (int)
 #server.proto.len.bytes=4
 
-#server.event-threads.min=1
-#server.event-threads.max=4
+## Whether to close the client socket on response commit. Default false.
+#server.proto.close-on-flush=true
+
 
 ## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
 
-#server.gw=true
+server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
@@ -30,9 +31,9 @@ server.exec-threads=4
 server.gw.target.localhost=8081,8082
 
 ## Max number of connections to be pooled for target.
-## DEPRECATED: Keep this 0. Not working as intended due to the single threaded 
+## DEPRECATED: Not working as intended due to the single threaded 
 ## task execution model of Netty
-server.gw.maxpool.localhost=0
+#server.gw.maxpool.localhost=0
 
 spring.jmx.enabled: false
 
