Server perf test case included. Proxy server unstable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 ## Server Config ##
-server.port=8093
+server.port=8081
 
-## Default 1. Note: Gateway communication executes on IO threads.
+## Default 1
 server.io-threads=2
 
 ## Default 4
-#server.exec-threads=4
+server.exec-threads=4
+
+## If monitor is to be enabled. Default disabled
+#server.monitor.enable=true
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
@@ -23,7 +26,7 @@ server.io-threads=2
 ## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
 
-server.gw=true
+#server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
