Made changes to Proxy impl. Using thread local for outbound endpoints and made some access synchronized. Still facing issue with concurrent test case. With concurrent channelActive being fired, one executor thread is blocking on a read operation. Not sure if this an issue with Netty.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Server Config ##
-server.port=8081
+server.port=8093
 
 ## Default 1
 server.io-threads=2
@@ -25,8 +25,7 @@ server.exec-threads=4
 
 ## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
-
-#server.gw=true
+server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
