WIP - Codec based protocol stack impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## Server Config ##
-server.port=8093
+server.port=8081
 
 ## Default 1
-server.io-threads=2
+server.io-threads=1
 
 ## Default 4
-server.exec-threads=4
+server.exec-threads=2
 
 ## If monitor is to be enabled. Default disabled
 #server.monitor.enable=true
@@ -14,7 +14,7 @@ server.exec-threads=4
 #server.proto.len.max=1024
 
 ## Length field offset. Default 0. Implies the length is prepended to the actual message that follows.
-#server.proto.len.offset=0
+server.proto.len.offset=2
 
 ## Length field size. Default 4. Implies the length is a 4 byte field (int)
 #server.proto.len.bytes=4
@@ -25,17 +25,25 @@ server.exec-threads=4
 
 ## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
-server.gw=true
+#server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
 #server.gw.target.127.0.0.1=8081,8082
-server.gw.target.localhost=8081,8082
+#server.gw.target.localhost=8081,8082
 
 ## Max number of connections to be pooled for target.
 ## DEPRECATED: Not working as intended due to the single threaded 
 ## task execution model of Netty
 #server.gw.maxpool.localhost=0
+
+## Protocol message types ##
+server.codecs.codec.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
+#server.codecs.codec.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
+
+## Handler for protocol message type ##
+server.handlers.handler.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
+
 
 spring.jmx.enabled: false
 
