Refactoring and restructuring. WIP for concurrent requests

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>protocomm</name>
-	<comment>Project hazelqueue created by Buildship.</comment>
+	<comment>Project protocomm created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
