--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.io-threads=1
 ## Default 4
 server.exec-threads=2
 
+server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
+
 ## If monitor is to be enabled. Default disabled
 #server.monitor.enable=true
 
@@ -14,7 +16,7 @@ server.exec-threads=2
 #server.proto.len.max=1024
 
 ## Length field offset. Default 0. Implies the length is prepended to the actual message that follows.
-server.proto.len.offset=2
+#server.proto.len.offset=2
 
 ## Length field size. Default 4. Implies the length is a 4 byte field (int)
 #server.proto.len.bytes=4
@@ -37,16 +39,8 @@ server.proto.len.offset=2
 ## task execution model of Netty
 #server.gw.maxpool.localhost=0
 
-## Protocol message types ##
-server.codecs.codec.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
-#server.codecs.codec.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
-
-## Handler for protocol message type ##
-server.handlers.handler.1=com.reactiva.emulator.xcomm.handlers.ITOCLogin
-
-
 spring.jmx.enabled: false
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %.-40logger{5} - %msg%n
-#logging.level.com.reactiva.emulator=DEBUG
+#logging.level.com.smsnow.adaptation=DEBUG
 
