Baseline implementation for PoC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 ## Default 1
-server.io-threads=1
+#server.io-threads=1
 
 ## Default 4
 server.exec-threads=2
@@ -43,4 +43,5 @@ spring.jmx.enabled: false
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %.-40logger{5} - %msg%n
 #logging.level.com.smsnow.adaptation=DEBUG
+#logging.level.io.netty=DEBUG
 
