PoC baseline 2. Using concurrent event executor. Reafactorings. Separated buffered/streamed codec impl.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
-## Server Config ##
+###########################
+## Server Configurations ##
+###########################
+
 server.port=8081
 
-## Default 1
+## Default 1. Threads executing NIO selector loop for channel READ/WRITE ##
 #server.io-threads=1
 
-## Default 4
+## Default 2. Threads executing protocol conversion ##
+#server.event-threads=4
+
+## Default 4. Threads executing the request handlers. These are the threads where business logics will run ##
 server.exec-threads=4
 
+## The request handler class ##
 server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
+
+## Enable buffered transport protocol. Default false, uses streamed transport ##
+#server.bytebuf.enable=false
 
 ## If monitor is to be enabled. Default disabled
 #server.monitor.enable=true
@@ -24,8 +34,11 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 ## Whether to close the client socket on response commit. Default false.
 #server.proto.close-on-flush=true
 
+##################################
+## Proxy gateway Configurations ##
+######### (EXPERIMENTAL) #########
+##################################
 
-## Proxy gateway Config ##
 ## Set to true if this server is used as a gateway proxy.
 #server.gw=true
 
@@ -39,9 +52,15 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 ## task execution model of Netty
 #server.gw.maxpool.localhost=0
 
-spring.jmx.enabled: false
+############################
+## Logging Configurations ##
+############################
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %.-40logger{5} - %msg%n
 #logging.level.com.smsnow.adaptation=DEBUG
 #logging.level.io.netty=DEBUG
 
+#########################
+## Spring Boot related ##
+#########################
+spring.jmx.enabled: false
