PoC baseline 2. Configurable charset.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,14 @@ server.exec-threads=4
 ## The request handler class ##
 server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 
-## Enable buffered transport protocol. Default false, uses streamed transport ##
-#server.bytebuf.enable=false
-
 ## If monitor is to be enabled. Default disabled
 #server.monitor.enable=true
+
+## Enable buffered transport protocol. Default false, uses streamed transport ##
+#server.proto.buffered=false
+
+## Character set for text data. Default UTF-8 ##
+#server.proto.charset=false
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
