WIP; concurrent requests not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ## Server Configurations ##
 ###########################
 
-server.port=8081
+server.port=8093
 
 ## Default 1. Threads executing NIO selector loop for channel READ/WRITE ##
 #server.io-threads=1
@@ -23,7 +23,7 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 #server.proto.buffered=false
 
 ## Character set for text data. Default UTF-8 ##
-#server.proto.charset=false
+#server.proto.charset=
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
 #server.proto.len.max=1024
@@ -43,17 +43,12 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 ##################################
 
 ## Set to true if this server is used as a gateway proxy.
-#server.gw=true
+server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
 #server.gw.target.127.0.0.1=8081,8082
-#server.gw.target.localhost=8081,8082
-
-## Max number of connections to be pooled for target.
-## DEPRECATED: Not working as intended due to the single threaded 
-## task execution model of Netty
-#server.gw.maxpool.localhost=0
+server.gw.target.localhost=8081,8082
 
 ############################
 ## Logging Configurations ##
