WIP; intermediate commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ## Server Configurations ##
 ###########################
 
-server.port=8093
+server.port=8081
 
 ## Default 1. Threads executing NIO selector loop for channel READ/WRITE ##
 #server.io-threads=1
@@ -43,7 +43,7 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 ##################################
 
 ## Set to true if this server is used as a gateway proxy.
-server.gw=true
+#server.gw=true
 
 ## In that case the target nodes should be set as
 ## server.gw.target.<host>=<port>,..
