Baseline 2 for protocol conversion following ITOC message structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ server.handler-class=com.smsnow.adaptation.server.rh.ITOCLoginHandler
 #server.proto.charset=
 
 ## Max length of the protocol message sent to server in a single request. Default 1000.
-#server.proto.len.max=1024
+server.proto.len.max=3000
 
 ## Length field offset. Default 0. Implies the length is prepended to the actual message that follows.
 #server.proto.len.offset=2
