--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ## Server Configurations ##
 ###########################
 
-server.port=8081
+server.port=6000
 
 ## Default 1. Threads executing NIO selector loop for channel READ/WRITE ##
 #server.io-threads=1
@@ -55,7 +55,7 @@ server.gw.target.localhost=8081,8082
 ############################
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %.-40logger{5} - %msg%n
-#logging.level.com.smsnow.adaptation=DEBUG
+logging.level.com.smsnow.adaptation=DEBUG
 #logging.level.io.netty=DEBUG
 
 #########################
